feat(lettering): support translation pack draft lettering
